[gd_scene load_steps=9 format=3 uid="uid://bj1aum4xuoa12"]

[ext_resource type="PackedScene" uid="uid://v7qctv8pjko6" path="res://Prefabs/tile_map.tscn" id="1_6yl0f"]
[ext_resource type="Script" path="res://Scripts/arena_level_2.gd" id="1_60je3"]
[ext_resource type="Texture2D" uid="uid://ceovcw7hm60ol" path="res://Unzipped Assets/startups_from_hell__underground_arena.png" id="2_wlktl"]
[ext_resource type="PackedScene" uid="uid://c3hpavbfwam7" path="res://Prefabs/player.tscn" id="3_m8wdb"]
[ext_resource type="PackedScene" uid="uid://bwmlwnl5dsoba" path="res://Prefabs/arrow.tscn" id="4_4uh3s"]
[ext_resource type="PackedScene" uid="uid://baq36f74emex" path="res://Prefabs/arrow_right.tscn" id="5_ljkka"]
[ext_resource type="PackedScene" uid="uid://clv7x2mnm088p" path="res://Prefabs/rock.tscn" id="7_xsrcc"]
[ext_resource type="FontFile" uid="uid://c8dd6b8uf8irk" path="res://Unzipped Assets/kenney_space-shooter-redux (1)/Bonus/kenvector_future.ttf" id="8_fxcql"]

[node name="Arena Level 2" type="Node2D"]
script = ExtResource("1_60je3")

[node name="TileMap" parent="." instance=ExtResource("1_6yl0f")]
layer_0/tile_data = PackedInt32Array(-65536, 131072, 1, -65535, 131072, 1, -65534, 131072, 1, -65533, 131072, 1, -65532, 131072, 1, -65531, 131072, 1, -65530, 131072, 1, -65529, 131072, 1, -65528, 131072, 1, -65527, 131072, 1, -65526, 131072, 1, -65525, 131072, 1, -65524, 131072, 1, -65523, 131072, 1, -65522, 131072, 1, -65521, 131072, 1, -65520, 131072, 1, -65519, 131072, 1, -65518, 131072, 1, -65517, 131072, 1, -65516, 131072, 1, -65515, 131072, 1, -65514, 131072, 1, -65513, 131072, 1, 65535, 131072, 1, 131071, 131072, 1, 196607, 131072, 1, 262143, 131072, 1, 327679, 131072, 1, 393215, 131072, 1, 458751, 131072, 1, 524287, 131072, 1, 589823, 131072, 1, 655359, 131072, 1, 720895, 131072, 1, 720896, 131072, 1, 720897, 131072, 1, 720898, 131072, 1, 720899, 131072, 1, 720900, 131072, 1, 720901, 131072, 1, 720902, 131072, 1, 720903, 131072, 1, 720904, 131072, 1, 720905, 131072, 1, 720906, 131072, 1, 720907, 131072, 1, 720908, 131072, 1, 720909, 131072, 1, 720910, 131072, 1, 720911, 131072, 1, 720912, 131072, 1, 720913, 131072, 1, 720914, 131072, 1, 720915, 131072, 1, 720916, 131072, 1, 720917, 131072, 1, 720918, 131072, 1, 720919, 131072, 1, 655384, 131072, 1, 589848, 131072, 1, 524312, 131072, 1, 458776, 131072, 1, 393240, 131072, 1, 327704, 131072, 1, 262168, 131072, 1, 196632, 131072, 1, 131096, 131072, 1, 65560, 131072, 1, 24, 131072, 1, -65512, 131072, 1, 720920, 131072, 1, -1, 131072, 1, 786431, 131072, 1)

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
scroll_offset = Vector2(48, 48)

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2(842, 398)
scale = Vector2(3.35714, 2.52564)
texture = ExtResource("2_wlktl")

[node name="Player" parent="." instance=ExtResource("3_m8wdb")]
position = Vector2(112, 600)

[node name="Arrow" parent="." instance=ExtResource("4_4uh3s")]
position = Vector2(1944, 704)

[node name="ArrowRight" parent="." instance=ExtResource("5_ljkka")]
position = Vector2(-184, 136)

[node name="Arrow Timer" type="Timer" parent="."]
wait_time = 4.0

[node name="ScoreTimer3" type="Timer" parent="."]
autostart = true

[node name="Rock" parent="." instance=ExtResource("7_xsrcc")]
position = Vector2(768, 504)

[node name="GameUi3" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ScoreLabel3" type="Label" parent="GameUi3"]
layout_mode = 0
offset_right = 1688.0
offset_bottom = 128.0
theme_override_fonts/font = ExtResource("8_fxcql")
theme_override_font_sizes/font_size = 30
text = "SCORE: 0000"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="timeout" from="Arrow Timer" to="." method="_on_arrow_timer_timeout"]
[connection signal="timeout" from="ScoreTimer3" to="." method="_on_score_timer_3_timeout"]
